--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website1</title>
 </head>
 <body>
-    <h1>Welcome To The Macs13114 First official Page!</h1>
+    <h1>Welcome to the Macs13114 first official page!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nisi placeat, culpa cum est ipsam iste sunt suscipit magnam, quisquam laudantium. Alias possimus ea nostrum odio, optio omnis incidunt. Et.</p>
 </body>
 </html>
