--- a/index.html
+++ b/index.html
@@ -3,8 +3,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amortization schedule Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Shpizer Amortization schedule 0.1</h1>
+    <div class="main-page">
+        <div class="head-line">
+            <h1>Loan Calculator 0.5</h1>
+        </div>
+        <div class="info">
+            <div class="info-c">
+                <p>
+                    Welcome to the Loan calculator! This calculator was made as an open-source project
+                    for a High-school project. This was made by only one student for the purpose of using it without any
+                    need to pay, watch ads or anything of this kind. Only to calculate a Financial diagram.
+                </p>
+                <p>
+                    In the Boxes below you can input all of The Variables to calculate using the Shpizer strategy.
+                </p>
+            </div>
+            <div class="input-area">
+                <div class="ia-content">
+                    <strong>Please insert all of the data below:</strong>
+                    <div class="inputs">
+                        <div class="loan-value">
+                            <label for="loan-value">Loan Value:</label>
+                            <input type="number" id="loan-value"></input>
+                        </div>
+                        <div class="rebirth">
+                            <label for="rebirth">Rebirth precentage:</label>
+                            <input type="number" id="rebirth">
+                        </div>
+                        <div class="months-loan">
+                            <label for="months">Amount of Months:</label>
+                            <input type="number", id="months">
+                        </div>
+                        <div class="calculate-button">
+                            <button>Calculate</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="calculations">
+    
+        </div>
+    </div>
 </body>
 </html>
